@@ -5,6 +5,7 @@ Date: ????
     - Fixed that several ore refining icons were improperly reskinned when materials added by Bob's Metal's, Chemicals and Intermediates or alternatively Angel's Industries were not present
     - Fixed that the liquefier animation was not playing
     - Fixed startup error when playing with Omni Compression related to the ore flotation cell recipes
+    - Fixed that lead and tin plate recipe icons for direct smelting were not reskinned when Angel's Smelting was not enabled
   Locale:
     - Corrected all references to improper spelling "liquifier", relating to the liquefier
 ---------------------------------------------------------------------------------------------------
